Fix starter logging and instrumentation issues